===============================================================================
                               Changes in 5.0
===============================================================================
# MPIR_CHKLMEM_ and MPIR_CHKPMEM_ macros are simplified, removing non-essential
  argument such as type case and custom error messages.

# Rename MPIR_CVAR_DEBUG_PROGRESS_TIMEOUT to MPIR_CVAR_PROGRESS_TIMEOUT, and
  enable it whether or not --enable-g=progress is used in configure.

# MPICH now generates the MPI-IO bindings when ROMIO is build inside MPICH. It
  remains the same for using ROMIO outside MPICH.

# Yaksa is now maintained inside MPICH rather than as an external submodule.  

# Added internal builtin datatypes and external builtin datatypes are mapped to
internal types. For example, both MPI_INT and MPI_INT32_T are mapped to internal
type MPIR_INT32. NOTE: direct usage of external MPI types are disallowed
in MPICH internally. For example, use MPIR_INT_INTERNAL to replace direct usage
of MPI_INT. Commonly used types include MPI_BYTE, MPI_CHAR, MPI_AINT, use
MPIR_BYTE_INTERNAL, MPIR_CHAR_INTERNAL, MPIR_AINT_INTERNAL instead. There is no
impact to users.

===============================================================================
                               Changes in 4.3
===============================================================================
# Support MPI memory allocation kinds side document.

# Support MPI ABI Proposal. Configure with --enable-mpi-abi and build with
  mpicc_abi. By default, mpicc still builds and links with MPICH ABI.

# Experimental API MPIX_Op_create_x. It supports user callback function with
  extra_state context and op destructor callback. It supports language bindings
  to use proxy function for language-specific user callbacks.

# Experimental API MPIX_{Comm,File,Session,Win}_create_errhandler_x. They allow
  user error handlers to have extra_state context and corresponding destructor.